--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "gsap": "^3.12.5",
     "prettier": "^3.0.1",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
+    "react-spinners": "^0.15.0",
+    "react-toastify": "^11.0.2",
+    "react-typed": "^2.0.12",
     "three": "^0.171.0"
   },
   "devDependencies": {
