--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
+    "framer-motion": "^12.0.5",
     "gsap": "^3.12.5",
+    "lucide-react": "^0.474.0",
     "prettier": "^3.0.1",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
